Part way through project.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Aloha Music</string>
+    <string name="txtSplash">Sounds of Hawaii</string>
+    <string name="ukulele">Ukulele Image</string>
+    <string name="drums">Drums Image</string>
+    <string name="btnUkulele">Play Ukulele Song</string>
+    <string name="btnDrums">Play Drums Song</string>
 </resources>
